--- a/views/drums.jade
+++ b/views/drums.jade
@@ -4,17 +4,12 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title
-    meta(name='description', content='')
+    meta(name='description', content='Play drums with the Leap Motion')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='/css/game.css')
-    audio(id='chirp' src='/audio/manatee_chirp.mp3')
+  body
     script(type='text/javascript' src='//js.leapmotion.com/leap-0.5.0.min.js')
     script(type='text/javascript' src='//js.leapmotion.com/leap-plugins-0.1.3.js')
     script(type='text/javascript' src='/js/pixi.dev.js')
     script(type='text/javascript' src='/js/class.js')
-    script(type='text/javascript' src='/js/sea-creature.js')
-    script(type='text/javascript' src='/js/manatee.js')
-    script(type='text/javascript' src='/js/food.js')
-    script(type='text/javascript' src='/js/alligator.js')
-    script(type='text/javascript' src='/js/game.js')
+    script(type='text/javascript' src='/js/drums.js')
     script(type='text/javascript' src='/js/setup.js')
