--- a/views/drums.jade
+++ b/views/drums.jade
@@ -7,9 +7,11 @@ html
     meta(name='description', content='Play drums with the Leap Motion')
     meta(name='viewport', content='width=device-width, initial-scale=1')
   body
+    audio(id='snare' src='/audio/snare.mp3')
     script(type='text/javascript' src='//js.leapmotion.com/leap-0.5.0.min.js')
     script(type='text/javascript' src='//js.leapmotion.com/leap-plugins-0.1.3.js')
     script(type='text/javascript' src='/js/pixi.dev.js')
     script(type='text/javascript' src='/js/class.js')
     script(type='text/javascript' src='/js/drums.js')
+    script(type='text/javascript' src='/js/drumstick.js')
     script(type='text/javascript' src='/js/setup.js')
